@@ -1,3 +1,4 @@
+	* improve save_resume behavior with only_if_modified flag
 	* fix issue with retrying trackers in tiers > 0
 	* fix last_upload and last_download resume data fields to use posix time
 	* improve error messages for no_connect_privileged_ports, by untangle it from the port filter
